# simple-monitor-client

./: .gitignore  README.md  env.example  justfile  pyproject.toml
sm_client/: __main__.py  app.py  settings.py  utils.py
sm_client/api/: __init__.py  client.py
sm_client/config/: __init__.py  manager.py
sm_client/scheduler/: __init__.py  manager.py
sm_client/sensors/: __init__.py  base.py  cpu.py  network.py  ram.py  registry.py  storage.py  zfs.py
