[project]
name = "sm_client"
version = "1.0.0"
description = "Smart Monitor Client - Collects system metrics"
requires-python = ">=3.14,<3.15"
dependencies = [
    "httpx>=0.26.0",
    "psutil>=5.9.8",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
