[project]
name = "sm_client"
version = "0.0.1"
description = "Simple Monitor Client - Collects system metrics"
requires-python = ">=3.14,<3.15"
dependencies = [
    "httpx>=0.26.0",
    "psutil>=5.9.8",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "nuitka>=4.1",
    "uv-build>=0.11.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"


[tool.nuitka]
file-version = "0.0.1"
product-name = "SimpleMonitor"
windows-company-name = "SM Client"
company-name = "paulwinex"
output-dir = 'build'
output-filename = "sm_client"
mode = "onefile"
assume-yes-for-downloads = true
disable-console = false
onefile = true
show-scons = true
standalone = true
enable-plugins = ["multiprocessing"]
nofollow-imports = ["pytest", "unittest"]
